# Diabetes-MMKGQA

./: .gitignore  AGENTS.md  AUTHORS.md  LICENSE  Makefile  PROMPTS_CODEX.md  README.md  README_TEMPLATE.md  TASKS.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pytest.ini  requirements-lock.txt
configs/: intents.yaml  ontology.yaml
data/: README.md  source_manifest.yaml
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
data/raw/diakg/: README.md  diakg_fixture.json
docs/: architecture.md  codex_target_prompt.md  diakg_acquisition.md  followup_questions.md  frontend_vendor.md  graph_workspace_guide.md  medmnist_acquisition.md  progress_log.md  project_plan.md  report_inputs.md  report_outline.md  ui_design_brief.md
docs/cases/: case_template.md
docs/test-report/: README_checklist.md  README_improvement_draft.md  final_test_report.md  kg_statistics.md  qa_platform_report_draft.md
frontend/: app.js  index.html  styles.css
scripts/: assemble_report_inputs.py  capture_readme_screenshots.mjs  fetch_diakg.py  fetch_medmnist.py  package_deliverables.py  run.ps1  start.ps1
src/diabetes_mmkgqa_starter/: __init__.py  cli.py  demo.py  graph_builder.py  package_builder.py
tests/: conftest.py  test_api_endpoints.py  test_cli_smoke.py  test_data_sources.py  test_demo.py  test_frontend_graph_ui.py  test_graph_build.py  test_ingest_diakg.py  test_ingest_manual.py  test_ingest_pneumoniamnist.py  test_ingest_retinamnist.py  test_neo4j_load.py  test_normalization_alias.py  test_portable_backend.py  test_qa_service.py  test_query_templates.py
(+26 files in other folders)
