[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-mmkgqa-starter"
version = "0.1.0"
description = "Educational multimodal medical KGQA starter for diabetes, pneumonia, and hypertension"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  {name = "Xiao Fang"},
  {name = "XinYuan Zhang"},
  {name = "Shuo Ma"},
]
maintainers = [
  {name = "Xiao Fang", email = "fangtoast@foxmail.com"},
]
license = {file = "LICENSE"}
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "httpx==0.27.2",
  "pandas==2.2.2",
  "pyarrow==24.0.0",
  "networkx==3.4.2",
  "pyyaml==6.0.2",
  "click==8.1.7",
  "typer==0.12.3",
  "pytest==8.3.3",
]

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "ruff==0.6.9",
]

[project.scripts]
diabetes-mmkgqa = "diabetes_mmkgqa_starter.cli:main"

[project.urls]
Repository = "https://github.com/fangtoast/Diabetes-MMKGQA"
Issues = "https://github.com/fangtoast/Diabetes-MMKGQA/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
